Fixed issue with blurry logo by replacing it with SVG. Tried using ease-out timing functions on the buttons to make them feel like they actually filled up the pbtton on the home page.

--- a/css/index.css
+++ b/css/index.css
@@ -100,8 +100,8 @@
     transition-property: transform;
     -webkit-transition-duration: 0.3s;
     transition-duration: 0.3s;
-    -webkit-transition-timing-function: ease-out;
-    transition-timing-function: ease-out;
+    -webkit-transition-timing-function: cubic-bezier(.5,0,.9,.5);
+    transition-timing-function: cubic-bezier(.5,0,.9,.5);
 }
 .register-button:hover, .register-button:focus, .register-button:active {
     color: white;
@@ -190,8 +190,8 @@
     font-size: 24px; 
     -webkit-transition-property: color;
     transition-property: color;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
+    -webkit-transition-duration: 0.25s;
+    transition-duration: 0.25s;
 }
 .lessons-button:before {
     content: "";
@@ -208,10 +208,10 @@
     transform-origin: 50%;
     -webkit-transition-property: transform;
     transition-property: transform;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-timing-function: ease-out;
-    transition-timing-function: ease-out;
+    -webkit-transition-duration: 0.25s;
+    transition-duration: 0.25s;
+    -webkit-transition-timing-function: cubic-bezier(.5,0,.9,.5);
+    transition-timing-function: cubic-bezier(.5,0,.9,.5);
 }
 .lessons-button:hover, .lessons-button:focus, .lessons-button:active {
     color: white;
